--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <title>Arbor's Guide</title>
     <body><div id="header"></div></body>
+    <table width="607" border="2" cellspacing="0">
+        <tr valign="top"><td height="14"><font size="3" face="Times New Roman"><b>Date</b></font></td></tr>
+            <td><font size ="3" face="Times New Roman"><b>Location</b></font></td>
+            <td><font size ="3" face="Times New Roman"><b>Test</b></font></td>
+    </table>
 </html>
