--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 <html>
     <title>Arbor's Guide</title>
     <body><div id="header"></div></body>
-    <div>
+    <div align="center"><p></p>
     <table width="607" border="2" cellspacing="0">
-        <tr valign="top"><td height="14"><font size="3" face="Times New Roman"><b>Date</b></font></td></tr>
-            <td><font size ="3" face="Times New Roman"><b>Location</b></font></td>
-            <td><font size ="3" face="Times New Roman"><b>Test</b></font></td>
+        <tr valign="top"><td height="14"><font size="3" face="Times New Roman"><b>Creeper</b></font></td>
+            <td><font size ="3" face="Times New Roman"><b>-</b></font></td>
+            <td><font size ="3" face="Times New Roman"><b>-</b></font></td></tr>
+        <tr valign="top"><td height="14"><font size="3" face="Times New Roman"><b>-</b></font></td>
+            <td><font size ="3" face="Times New Roman"><b>Aw</b></font></td>
+            <td><font size ="3" face="Times New Roman"><b>Man</b></font></td></tr>
     </table></div>
 </html>
