--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML>
 
 <link href="style.css" rel="stylesheet" type="text/css" media="screen">
 <link href="style.css" rel="stylesheet" type="text/css" media="print">
 
 <html>
     <title>Arbor's Guide</title>
-    <!This is a comment?>
+    <!This is a comment??>
     <body><div id="header"></div></body>
     <div align="center"><p></p>
     <table width="607" border="2" cellspacing="0">
