--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE HTML>
 
-<link href="style.css" rel="stylesheet" type="text/css" media="screen">
-<link href="style.css" rel="stylesheet" type="text/css" media="print">
-
 <html>
-    <title>Arbor's Guide</title>
-    <!This is a comment??>
-    <body><div id="header"></div></body>
-    <div align="center"><p></p>
-    <table width="607" border="2" cellspacing="0">
-        <tr valign="top"><td height="14"><font size="3" face="Times New Roman"><b>Creeper</b></font></td>
-            <td><font size ="3" face="Times New Roman"><b>-</b></font></td>
-            <td><font size ="3" face="Times New Roman"><b>-</b></font></td></tr>
-        <tr valign="top"><td height="14"><font size="3" face="Times New Roman"><b>-</b></font></td>
-            <td><font size ="3" face="Times New Roman"><b>Aw</b></font></td>
-            <td><font size ="3" face="Times New Roman"><b>Man</b></font></td></tr>
-    </table></div>
+    <head> 
+        <link rel="stylesheet" href="styles.css">
+        <title>Arbor's Guide</title>
+    </head>
+    <!--This is a comment-->
+    <body>
+        <h1 style="font-size:28px;font-family: Arial, Helvetica, sans-serif;">Headings can be created with the "h1" tag</h1>
+        <p style="color:#ff0000">Paragraphs can be created with the "p" tag, and given a font and color with the style attirbute.
+            <a href="https://www.youtube.com/watch?v=AUL0vAXVQ9c">Links can be created with text by the "a" tag including "href=" folloed by a link and some text</a>
+        </p>
+        <hr>
+        <p>This is a second paragraph with a horizontal rule above it. There is now a <br> break inbetween these lines without starting a new paragraph</p>
+        <p>Unfortunately all subscripts (such as H<sub>2</sub>O) have to have individual tags around the subscript, might want to find a converter for this</p>
+        <img src="myfavoritepicture.png" alt="myfavoritepicture" width="100" height="100">
+        </body>
 </html>
