Basic format and main page of the site developed

--- a/index.html
+++ b/index.html
@@ -2,18 +2,50 @@
 
 <html>
     <head> 
-        <link rel="stylesheet" href="styles.css">
         <title>Arbor's Guide</title>
+        <link rel="stylesheet" href="Styles\mainstyle.css"><link rel="icon" type="image" href="SiteElementPictures\Logo.png">
+        <meta name ="keywords" content="Arbor's Guide"><meta name="viewport" content="width=device-width, intiial-scale=1.0">
     </head>
-    <!--This is a comment-->
+    <!--This is a comment<p style="text-align: center;"><img src="SiteElementPictures\myfavoritepicture.png" alt="myfavoritepicture" width="100" height="100"></p>-->
+
+    <header>
+        <h1>Arbor's Guide to...</h1>
+    </header>
+
     <body>
-        <h1 style="font-size:28px;font-family: Arial, Helvetica, sans-serif;">Headings can be created with the "h1" tag</h1>
-        <p style="color:#ff0000">Paragraphs can be created with the "p" tag, and given a font and color with the style attirbute.
-            <a href="https://www.youtube.com/watch?v=AUL0vAXVQ9c">Links can be created with text by the "a" tag including "href=" folloed by a link and some text</a>
-        </p>
-        <hr>
-        <p>This is a second paragraph with a horizontal rule above it. There is now a <br> break inbetween these lines without starting a new paragraph</p>
-        <p>Unfortunately all subscripts (such as H<sub>2</sub>O) have to have individual tags around the subscript, might want to find a converter for this</p>
-        <img src="myfavoritepicture.png" alt="myfavoritepicture" width="100" height="100">
-        </body>
+        <section>
+            <nav>
+                <li><h3>Navigation</h3></li><br>
+                <li><a href="#">Quick References</a></li>
+            </nav>
+            <div class="centraldivision">
+
+                <h2>Welcome!</h2>
+                <p><b><q>This is a book about color, and more truthfully, this is a book about understanding the world around you.</q></b></p>
+
+                <p><i>Arbor's Guide</i> (this website!) and <i>Arbor's Guide to Color</i> (a yet to be released book compiling much of this site) were officially started in January of 2025. Arbor's Guide was intended to be a centralized, practical, and comprehensive source of information and tools to help myself and others understand the world around them, with a special focus on all topics related to color.<br></p>
+
+                <p><b><q>Perhaps the most important and emergently complex questions that we as people can ever pose, begin simply, with <i>‘why.’</i></q></b></p>
+
+                <p>An extensive discussion of the origins and objectives of Arbor's Guide can be found on <a href="MainPages\arborsguideorigins.html">this page</a>, and information on all other contributor's to the project can be found on <a href="#">this page</a>. With the introduction out of the way, go off and explore this Guide!<br>
+                <br>
+                (insert images in a nice array which link to different pages here)
+                </p>
+                <p>
+                    Objectives for Site Construction:
+                    <br>- Figure out how to make multiple pages and link between them
+                    <br>- Figure out how to make the rotating text guide logo in page header
+                    <br>- Develop a search function, tag pages to allow for sorting by tags (advanced, low priority for now)
+                </p>
+            </div>
+        </section>
+
+        <div class="hemifooter">
+                <p>This is a second paragraph with a horizontal rule above it. There is now a <br> break inbetween these lines without starting a new paragraph</p>
+        </div>
+
+    </body>
+
+    <footer>Arbor's Guide</footer>
+
 </html>
