minor grammar edit moment

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h2>Welcome!</h2>
                 <p><b><q>This is a book about color, and more truthfully, this is a book about understanding the world around you.</q></b></p>
 
-                <p><i>Arbor's Guide</i> (this website!) and <i>Arbor's Guide to Color</i> (a yet to be released book compiling much of this site) were officially started in January of 2025. Arbor's Guide was intended to be a centralized, practical, and comprehensive source of information and tools to help myself and others understand the world around them, with a special focus on all topics related to color.<br></p>
+                <p><i>Arbor's Guide</i> (this website!) and <i>Arbor's Guide to Color</i> (a yet to be released book compiling much of this site) were officially started in January of 2025. Arbor's Guide is intended to be a centralized, practical, and comprehensive source of information and tools to help myself and others understand the world around them, with a special focus on all topics related to color.<br></p>
 
                 <p><b><q>Perhaps the most important and emergently complex questions that we as people can ever pose, begin simply, with <i>‘why.’</i></q></b></p>
 
