A couple new main pages added

--- a/MainPages/arborsguideorigins.html
+++ b/MainPages/arborsguideorigins.html
@@ -4,9 +4,8 @@
     <head> 
         <title>Arbor's Guide</title>
         <link rel="stylesheet" href="../Styles/mainstyle.css"><link rel="icon" type="image" href="../SiteElementPictures/Logo.png">
-        <meta name ="keywords" content="Arbor's Guide"><meta name="viewport" content="width=device-width, intiial-scale=1.0">
+        <meta name="viewport" content="width=device-width, intiial-scale=1.0">
     </head>
-    <!--This is a comment<p style="text-align: center;"><img src="SiteElementPictures\myfavoritepicture.png" alt="myfavoritepicture" width="100" height="100"></p>-->
 
     <header>
         <h1>Arbor's Guide to Arbor's Guide</h1>
@@ -15,19 +14,21 @@
     <body>
         <section>
             <nav>
-                <li><h3>Navigation</h3></li><br>
-                <li><a href="#">Quick References</a></li>
+                <li style = "line-height: 0.7;"><h3>Navigation</h3></li><br>
+                <li><a href="arborsguide\MainPages\quickreferences.html">Quick References</a></li>
+                <li><a href="arborsguide\MainPages\thelist.html">The List</a></li>
+                <li><a href="arborsguide\MainPages\journal.html">The Journal</a></li>
             </nav>
             <div class="centraldivision">
 
                 <h2>Origins of the Guide and it's Purpose</h2>
-                <p>The story of <i>Arbor's Guide</i> innevitably begins with the story of it's eponymous author. The form of writing here will now enter the first person, as, frankly, it would be odd to write about myself from an external perspective<br></p>
+                <p>The story of how <i>Arbor's Guide</i> came to be is, well, difficult to describe and yet also simple. I don't have a very good memory, and so when I first started my PhD I created a small google doc with the same title as this site, and there I put various things that I had a knack for consistently needing but never easily remembered. The most common items I referenced were the constant for converting nm to eV, the wavelengths of Ka1/a2 radiation from Cu/Mo/Ag sources, and a map of the lab and its room numbers. I'm not sure at what point the idea started to develop into something more than just a reference book. Knowing myself, and my habits of dreaming an idea far into the future, it was probably within an hour of naming the document that I thought about writing actual guides to various topics.<br>I've always been somewhat frustrated with the available resources for understanding scientific content, as many of them are, frankly, shallow, and rarely truly address the subject in a comprehensive manner that makes me feel like <i>I'm actually understanding this piece of the world thats in front of me.</i><br>I've never been satisfied with partial explanations that don't yield "true understanding" (a very subjective phrase, of course, but the best I can think of for now), and when I was younger it was something that quite actively hindered my ability to act. This was especially true for chemistry and lab procedures, if I didn't understand exactly why I was doing what I was doing and what my actions were influencing at a chemical scale, I had a tendency to forget things, mix up the order of steps, and make mistakes. Learning about <i>why</i> I was doing what I was doing was essential for me to actually function and succeed, without that knowledge of <i>why</i> I would feel uncertain or paralyzed in the face of tasks.<br>At this point in my life (2025, almost 23 I suppose) I've gotten better at being able to work with things even if I don't fully understand what they're doing. It's necessary sometimes, especially for obscure  reactions that, well, people have never actually had the time to figure out their mechanisms. Still though I find that <i>good</i> educational resources, which properly dig into a topic and don't <i>hide</i> any higher level content from you, are difficult to come by. I suppose that part of this can be attributed to, well, the people who make these resources. Many folks who create resources are not especially well educated in those topics, or have a very single-sided perspective, or in their lack of experience are accidentally perpetuating incorrect theories which have since been proven wrong but haven't been stamped out yet by those who are more learned in this subject. Scientists tend to spend a majority of their time focused on experimental design, theory, and their particular segment of research. Scientists are, bluntly speaking, often bad at writing and communication and too caught up in their own work to spend time creating good resources or correcting bad resources. I can only hope that the state of this website speaks to the latter point for myself, and hopefully not to the former point. I am by no means immune from this though, I have a tendency to ramble, and as I've gotten deeper into my fields of study it has become easier to use terminology ("jargon") left and right without considering whether my audience knows these terms. <br>The broad scope of this guide is partially intended to address that issue exactly. My goal is not necesarilly to explain everything in existence, but to focus my time and energy into the most important subjects, and wherever else necessary link to external resources for those I don't have time for (or those which someone else has already done a fantastic job!).<br>At some point I will come back and turn this page into a proper dialogue, rather than this wandering ramble of mine, while hopefully retaining the frank and conversational style that I prefer. I am far too cognizant, while observing the wall of text before me in VS code, that there is little architecture to what I have just said, and most certainly points which I have forgotten to address, or which I did not fully address because I got distracted by others that came to mind. I suppose if I were to briefly summarize my feelings though, in regards to why I started this project, the following statement may do best:<br>I have a shit memory and most educational resources fucking suck, so I decided its time to make my own, centralized knowledge base that I can refer back to when my memory fails for remembering a topic, or remembering where a good resource is for understanding that topic.<br></p>
                 <p></p>
             </div>
         </section>
 
         <div class="hemifooter">
-                <p>This is a second paragraph with a horizontal rule above it. There is now a <br> break inbetween these lines without starting a new paragraph</p>
+                <p>Last Edited: 2025-03-09.</p>
         </div>
 
     </body>
