--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <body>
         <section>
             <nav>
-                <li><h3>Navigation</h3></li><br>
-                <li><a href="#">Quick References</a></li>
+                <li style = "line-height: 0.7;"><h3>Navigation</h3></li><br>
+                <li><a href="arborsguide\MainPages\quickreferences.html">Quick References</a></li>
+                <li><a href="arborsguide\MainPages\thelist.html">The List</a></li>
+                <li><a href="arborsguide\MainPages\journal.html">The Journal</a></li>
             </nav>
             <div class="centraldivision">
 
@@ -41,7 +43,7 @@
         </section>
 
         <div class="hemifooter">
-                <p>This is a second paragraph with a horizontal rule above it. There is now a <br> break inbetween these lines without starting a new paragraph</p>
+                <p>This space reserved for hemifooter text, whenever I decide what to put here</p>
         </div>
 
     </body>
