minor edits, I can't help but wonder whether its normal to make commits this frequently, or whether its frowned upon in the culture of folks who directly learned code. Perhaps it would be frowned upon as well for me to ramble these thoughts in the commit description, so be it, it is done.

--- a/MainPages/journal.html
+++ b/MainPages/journal.html
@@ -15,14 +15,14 @@
         <section>
             <nav>
                 <li style = "line-height: 0.7;"><h3>Navigation</h3></li><br>
-                <li><a href="MainPages\quickreferences.html">Quick References</a></li>
-                <li><a href="MainPages\thelist.html">The List</a></li>
-                <li><a href="MainPages\journal.html">The Journal</a></li>
+                <li><a href="quickreferences.html">Quick References</a></li>
+                <li><a href="thelist.html">The List</a></li>
+                <li><a href="journal.html">The Journal</a></li>
             </nav>
             <div class="centraldivision">
 
                 <h2>2025-03-09 - 18:00-19:00</h2>
-                <p>First entry of the journal is made, with the intention of this page being that it eventually becomes an incomprehensibly long dialogue of my internal thoughts regarding the project as I work on it. This will become a mess, it is intended to be a mess, the other pages are intended to be less of a mess, so let us hope that this acts as a suitable filter as I continue working. I am not sure what my policies will be regarding the sanctity of preserving these entries, i.e., I am not sure whether I will be establishing any strong rules against retroactively editing these entries. This is, after all, a public page, and I can certainly imagine myself returning here in a couple of years and feeling embarassed to see the manner in which I was speaking.<br>This is, however, a wonderful opportunity to record who I am, who I <i>was.</i> This is also the first journal entry, so perhaps of all the ones that could be read, this is the most likely to be seen, and I feel some need to leave an impression. I do not know who will read these pages, I do not know if anyone will, with the project as early as it is now. Yet if someone does happen to wander here, by my direction, by anothers direction, or by chance, here is what I'll say to you:<br>I was real, I was here, I loved color, I loved this world, and I wrote this. Contained within this guide may be the summary of all my chosen dreams and knowledge made manifest, I hope that you find something you enjoy.<br></p>
+                <p>The first journal entry. The the intention of this page is that it eventually becomes an incomprehensibly long dialogue of my internal thoughts regarding the project as I work on it. This will become a mess, it is intended to be a mess. The other pages are intended to be less of a mess, so let us hope that this acts as a suitable filter as I continue working. I am not sure what my policies will be regarding the sanctity of preserving these entries, i.e., I am not sure whether I will be establishing any strong rules against retroactively editing these entries. This is, after all, a public page, and I can certainly imagine myself returning here in a couple of years and feeling the need to edit pieces here.<br>This is, however, an excellent opportunity to record who I am, who I <i>was.</i> This is also the first journal entry, so perhaps of all the ones that could be read, this is the most likely to be seen (top of the page and all), so I feel some need to leave an impression. I do not know who will read these pages, I do not know if anyone will, with the project as early as it is now. Yet if someone does happen to wander here, by my direction, by anothers direction, or by chance, here is what I'll say to you:<br>I was real, I was here, I loved color, I loved music, I loved this world, and I wrote this. Contained within this guide may be the summary of all my chosen dreams and knowledge made manifest, I hope that you find something you enjoy.<br></p>
                 <p></p>
             </div>
         </section>
