--- a/MainPages/arborsguideorigins.html
+++ b/MainPages/arborsguideorigins.html
@@ -15,9 +15,9 @@
         <section>
             <nav>
                 <li style = "line-height: 0.7;"><h3>Navigation</h3></li><br>
-                <li><a href="MainPages\quickreferences.html">Quick References</a></li>
-                <li><a href="MainPages\thelist.html">The List</a></li>
-                <li><a href="MainPages\journal.html">The Journal</a></li>
+                <li><a href="quickreferences.html">Quick References</a></li>
+                <li><a href="thelist.html">The List</a></li>
+                <li><a href="journal.html">The Journal</a></li>
             </nav>
             <div class="centraldivision">
 
