--- a/MainPages/quickreferences.html
+++ b/MainPages/quickreferences.html
@@ -15,20 +15,145 @@
         <section>
             <nav>
                 <li style = "line-height: 0.7;"><h3>Navigation</h3></li><br>
+                <li><a href="../index.html">Main Page</a></li>
                 <li><a href="quickreferences.html">Quick References</a></li>
+                <li><a href="updatelog.html">What's New?</a></li>
                 <li><a href="thelist.html">The List</a></li>
-                <li><a href="journal.html">The Journal</a></li>
             </nav>
             <div class="centraldivision">
 
                 <h2>Quick References</h2>
-                <p>1239.842/nm = eV</p>
+                <p>Equations and Conversions
+                    <ul>
+                        <li style="font-size: 16px;">Wavelength to Energy (eV): 1239.842/nm = eV</li>
+                        <li style="font-size: 16px;">Hartrees (eh) to kcal/mol: eh*627.509474063112 = kcal/mol</li>
+                    </ul>
+                    </p>
+                <p>Symbols and Alt-Codes. <br>Note: Alt-codes are dependant on what code page is referenced by a particular software. Generally the newer 09## codes are <span style="color:red">finicky</span> and may not work but the 02## codes are relatively consistent.
+                    <table>
+                        <tr style="border-bottom: 2px solid black;">
+                            <th>Symbol Name</th>
+                            <th>Symbol</th>
+                            <th>Alt Code (Alt+#)</th>
+                        </tr>
+                        <tr>
+                            <th>Angstrom (Ångström)</th>
+                            <th>Å</th>
+                            <th>0197</th>
+                        </tr>
+                        <tr>
+                            <th>Plus or Minus</th>
+                            <th>±</th>
+                            <th>241</th>
+                        </tr>
+                        <tr>
+                            <th>Degree</th>
+                            <th>°</th>
+                            <th>0176</th>
+                        </tr>
+                        <tr>
+                            <th>Mu (lowercase)</th>
+                            <th>µ</th>
+                            <th>230</th>
+                        </tr>
+                        <tr>
+                            <th>Lambda (lowercase)</th>
+                            <th>λ</th>
+                            <th style="color:red;">0955</th>
+                        </tr>
+                        <tr>
+                            <th>Dot for Hydrates</th>
+                            <th>•</th>
+                            <th>0149</th>
+                        </tr>
+                        <tr>
+                            <th>Alpha (lowercase)</th>
+                            <th>α</th>
+                            <th>224</th>
+                        </tr>
+                        <tr>
+                            <th>Beta (lowercase)</th>
+                            <th>ß</th>
+                            <th>225</th>
+                        </tr>
+                        <tr>
+                            <th>Gamma (lowercase)</th>
+                            <th>γ</th>
+                            <th style="color:red;">0947</th>
+                        </tr>
+                        <tr>
+                            <th>Delta (lowercase)</th>
+                            <th>δ</th>
+                            <th>235</th>
+                        </tr>
+                        <tr>
+                            <th>Delta (capital)</th>
+                            <th>Δ</th>
+                            <th style="color:red;">0916</th>
+                        </tr>
+                        <tr>
+                            <th>Epsilon</th>
+                            <th>ε</th>
+                            <th>238</th>
+                        </tr>
+                        <tr>
+                            <th>Sigma (lowercase)</th>
+                            <th>σ</th>
+                            <th>229</th>
+                        </tr>
+                        <tr>
+                            <th>Pi (lowercase)</th>
+                            <th>π</th>
+                            <th>227</th>
+                        </tr>
+                        <tr>
+                            <th>Theta (lowercase)</th>
+                            <th>θ</th>
+                            <th style="color:red;">0952</th>
+                        </tr>
+                        <tr>
+                            <th>Omega (lowercase)</th>
+                            <th>ω</th>
+                            <th style="color:red;">0969</th>
+                        </tr>
+                        <tr>
+                            <th>Omega (capital)</th>
+                            <th>Ω</th>
+                            <th>234</th>
+                        </tr>
+                        <tr>
+                            <th>Phi (lowercase)</th>
+                            <th>φ</th>
+                            <th>237</th>
+                        </tr>
+                        <tr>
+                            <th>Phi (capital)</th>
+                            <th>Φ</th>
+                            <th>232</th>
+                        </tr>
+                        <tr>
+                            <th>Kappa</th>
+                            <th>κ</th>
+                            <th style="color:red;">0954</th>
+                        </tr>
+                        <tr>
+                            <th>Tau (lowercase)</th>
+                            <th>τ</th>
+                            <th>231</th>
+                        </tr>
+                        <tr>
+                            <th>Rho (lowercase)</th>
+                            <th>ρ</th>
+                            <th style="color:red;">961</th>
+                        </tr>
+                    </table>
+                </p>
                 <p></p>
             </div>
         </section>
 
         <div class="hemifooter">
-                <p>Last Edited: 2025-03-09</p>
+                <p>Last Edited: 2025-04-20</p>
         </div>
 
     </body>
