--- a/MainPages/thelist.html
+++ b/MainPages/thelist.html
@@ -15,16 +15,33 @@
         <section>
             <nav>
                 <li style = "line-height: 0.7;"><h3>Navigation</h3></li><br>
+                <li><a href="../index.html">Main Page</a></li>
                 <li><a href="quickreferences.html">Quick References</a></li>
+                <li><a href="updatelog.html">What's New?</a></li>
                 <li><a href="thelist.html">The List</a></li>
-                <li><a href="journal.html">The Journal</a></li>
             </nav>
             <div class="centraldivision">
 
                 <h2>The List</h2>
-                <p>The following page enumerates every topic that must be understood for a comprehensive understanding of color. Additionally it serves the purpose of being a place for me to track the project and its goals.<br>
+                <p>The following page enumerates every topic that must be understood for a comprehensive understanding of color. Additionally it serves the purpose of being a place for me to track the project and its goals. The list is not in any particular order (for now).<br>
                 <ul>
-                    <li>Waves</li>
+                    <li>Waves and their Mathematical Formulation</li>
+                    <li>Symmetry and Group Theory</li>
+                    <li>Atomic Emission Spectra</li>
+                    <li>Color Spaces</li>
+                    <li>Light Propagation</li>
+                    <li>Light Polarization</li>
+                    <li>Light Energy/Wavelength Relationships</li>
+                    <li>Light Scattering Processes</li>
+                    <li>Light Quantization</li>
+                    <li>Molecular Vibrations</li>
+                    <li>Molecular Orbital Approximations</li>
+                    <li>Atomic Orbitals</li>
+                    <li>Commercially/Industrially Relevant Dyes and Pigments (Modern and Historical)</li>
+                    <li>Light Measurement Techniques (Absorption/Transmission, Reflectance)</li>
+                    <li>Monochromation</li>
+                    <li>Bonding Geometries</li>
+                    <li>Spin-Statistics</li>
                 </ul>
                     <br></p>
                 <p></p>
@@ -32,7 +49,7 @@
         </section>
 
         <div class="hemifooter">
-                <p>Last Edited: 2025-03-09</p>
+                <p>Last Edited: 2025-04-20</p>
         </div>
 
     </body>
