--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
         <section>
             <nav>
                 <li style = "line-height: 0.7;"><h3>Navigation</h3></li><br>
+                <li><a href="index.html">Main Page</a></li>
                 <li><a href="MainPages\quickreferences.html">Quick References</a></li>
+                <li><a href="MainPages\updatelog.html">What's New?</a></li>
                 <li><a href="MainPages\thelist.html">The List</a></li>
-                <li><a href="MainPages\journal.html">The Journal</a></li>
             </nav>
             <div class="centraldivision">
 
                 <h2>Welcome!</h2>
                 <p><b><q>This is a book about color, and more truthfully, this is a book about understanding the world around you.</q></b></p>
 
-                <p><i>Arbor's Guide</i> (this website!) and <i>Arbor's Guide to Color</i> (a yet to be released book compiling much of this site) were officially started in January of 2025. Arbor's Guide is intended to be a centralized, practical, and comprehensive source of information and tools to help myself and others understand the world around them, with a special focus on all topics related to color.<br></p>
+                <p><i>Arbor's Guide</i> (this website!) and <i>Arbor's Guide to Color</i> (a WIP book) are two projects that officially started in January of 2025. Arbor's Guide is intended to be a centralized, practical, and comprehensive source of information and tools to help myself and others understand the world around them, with a special focus on all topics related to color.<br></p>
 
                 <p><b><q>Perhaps the most important and emergently complex questions that we as people can ever pose, begin simply, with <i>‘why.’</i></q></b></p>
 
-                <p>An extensive discussion of the origins and objectives of Arbor's Guide can be found on <a href="MainPages\arborsguideorigins.html">this page</a>, and information on all other contributor's to the project can be found on <a href="#">this page</a>. With the introduction out of the way, go off and explore this Guide!<br>
+                <p>An extensive discussion of the origins and objectives of Arbor's Guide can be found on <a href="MainPages\arborsguideorigins.html">this page</a>, and information on all other contributor's to the project can be found on <a href="MainPages/contributors.html">this page</a>. With the introduction out of the way, go off and explore this Guide!<br>
                 <br>
                 (insert images in a nice array which link to different pages here)
                 </p>
                 <p>
                     Objectives for Site Construction:
-                    <br>- Figure out how to make multiple pages and link between them
                     <br>- Figure out how to make the rotating text guide logo in page header
                     <br>- Develop a search function, tag pages to allow for sorting by tags (advanced, low priority for now)
                 </p>
@@ -43,7 +43,7 @@
         </section>
 
         <div class="hemifooter">
-                <p>This space reserved for hemifooter text, whenever I decide what to put here</p>
+                <p>Last Edited: 2025-04-20</p>
         </div>
 
     </body>
