Added good resources page, see updatelog for more details

--- a/MainPages/arborsguideorigins.html
+++ b/MainPages/arborsguideorigins.html
@@ -19,6 +19,7 @@
                 <li><a href="quickreferences.html">Quick References</a></li>
                 <li><a href="updatelog.html">What's New?</a></li>
                 <li><a href="thelist.html">The List</a></li>
+                <li><a href="goodresources.html">Good Resources</a></li>
             </nav>
             <div class="centraldivision">
 
