--- a/MainPages/thelist.html
+++ b/MainPages/thelist.html
@@ -19,6 +19,7 @@
                 <li><a href="quickreferences.html">Quick References</a></li>
                 <li><a href="updatelog.html">What's New?</a></li>
                 <li><a href="thelist.html">The List</a></li>
+                <li><a href="goodresources.html">Good Resources</a></li>
             </nav>
             <div class="centraldivision">
 
@@ -43,13 +44,29 @@
                     <li>Bonding Geometries</li>
                     <li>Spin-Statistics</li>
                 </ul>
+                <h2>The List of Specific Planned Guides</h2>
+                <p>The following elements are specific planned guides which are less elemental topics than those above and/or more focused on specific tools and subtopics.<br>
+                <ul>
+                    <li>Basic Quantum Mechanical Calculations in ORCA</li>
+                    <li>Fundamentals of Molecular Calculations - Basis Sets and Density Functional Theory</li>
+                    <li>Creating Electrostatic Potential Maps with ORCA</li>
+                    <li>Origins of the Molecular Orbitals of Benzene</li>
+                    <li>Molecular Orbitals of Cyclic π Systems</li>
+                    <li>Molecular Orbitals of Aliphatic Motifs</li>
+                    <li>Combinations of Molecular Orbitals - How To Understand Complex Organic Molecules</li>
+                    <li>Molecular Orbitals of Inorganic Compounds</li>
+                    <li>Molecular Orbitals of Organometallic Complexes</li>
+                    <li>Catalogue of Nitrogenous Bases and their Acidity Constants</li>
+                    <li>Fundamentals of Brønsted Acids and Bases</li>
+                    <li>A Detailed Discussion of Molecular Design and its Impact on Brønsted Acids and Bases</li>
+                </ul>
                     <br></p>
                 <p></p>
             </div>
         </section>
 
         <div class="hemifooter">
-                <p>Last Edited: 2025-04-20</p>
+                <p>Last Edited: 2025-08-02</p>
         </div>
 
     </body>
