--- a/MainPages/updatelog.html
+++ b/MainPages/updatelog.html
@@ -19,10 +19,16 @@
                 <li><a href="quickreferences.html">Quick References</a></li>
                 <li><a href="updatelog.html">What's New?</a></li>
                 <li><a href="thelist.html">The List</a></li>
+                <li><a href="goodresources.html">Good Resources</a></li>
             </nav>
             <div class="centraldivision">
 
                 <h2>Update Log</h2>
+                <p>2025-08-02 Update<br>
+                <ul>
+                    <li>Created the Good Resources Page</li>
+                    <li>Added the Specific Planned Guides section to The List</li>
+                </ul>
                 <p>2025-04-20 Update<br>
                 <ul>
                     <li>Additions to The List</li>
