--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
                 <li><a href="MainPages\quickreferences.html">Quick References</a></li>
                 <li><a href="MainPages\updatelog.html">What's New?</a></li>
                 <li><a href="MainPages\thelist.html">The List</a></li>
+                <li><a href="MainPages\goodresources.html">Good Resources</a></li>
             </nav>
             <div class="centraldivision">
 
                 <h2>Welcome!</h2>
                 <p><b><q>This is a book about color, and more truthfully, this is a book about understanding the world around you.</q></b></p>
 
-                <p><i>Arbor's Guide</i> (this website!) and <i>Arbor's Guide to Color</i> (a WIP book) are two projects that officially started in January of 2025. Arbor's Guide is intended to be a centralized, practical, and comprehensive source of information and tools to help myself and others understand the world around them, with a special focus on all topics related to color.<br></p>
+                <p><i>Arbor's Guide</i> (this website!) and <i>Arbor's Guide to Color</i> (a book that may one day be finished) are two projects that officially started in January of 2025. Arbor's Guide is intended to be a centralized, practical, and comprehensive source of information and tools to help myself and others understand the world around them, with a special focus on all topics related to color.<br></p>
 
                 <p><b><q>Perhaps the most important and emergently complex questions that we as people can ever pose, begin simply, with <i>‘why.’</i></q></b></p>
 
@@ -38,12 +39,13 @@
                     Objectives for Site Construction:
                     <br>- Figure out how to make the rotating text guide logo in page header
                     <br>- Develop a search function, tag pages to allow for sorting by tags (advanced, low priority for now)
+                    <br>- Write the first guide!
                 </p>
             </div>
         </section>
 
         <div class="hemifooter">
-                <p>Last Edited: 2025-04-20</p>
+                <p>Last Edited: 2025-08-02</p>
         </div>
 
     </body>
